<resources>
    <string name="app_name">E-Kantin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="spin">Login Sebagai</string>
    <string-array name="spinnerItems">
        <item>Admin</item>
        <item>Penjual</item>
        <item>Pembeli</item>
    </string-array>
    <string name="tentang1">Aplikasi e-Kantin dibuat untuk keperluan memenuhi Final Project\n mata kuliah Mobile Programming\n
    </string>
    <string name="kelas">Kelas 17 D3 MI 01</string>
    <string name="nama">Developer :\n\n
    Ade Fitri A.D \n Mashudi Rohmat \n
    Farhan Yulianto \n
    Gustu Maulana Firmansyah \n
    Faiqotur Rizki \n </string>
    <string name="npm">\n
17.02.0005 \n
17.02.0008 \n
17.02.0024 \n
17.02.0039 \n
17.02.0058
    </string>
    <string name="copyright">Copyright c Universitas AMIKOM Yogyakarta 2018</string>
    <string name="title_activity_penjuall">PenjuallActivity</string>
    <string name="title_activity_pesanan">PesananActivity</string>
    <string name="title_activity_menusaya">MenusayaActivity</string>
    <string name="title_activity_edit_menu">EditMenuActivity</string>
    //dari crud
    <string name="nama_app">twoh.co</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AppInventory</string>
    <string name="barang_hint">Nama Barang</string>
    <string name="harga_hint">Harga Barang</string>
    <string name="merk_hint">Merk Barang</string>
    <string name="tombol_submit">Submit</string>
    <string name="tombol_tambah">Tambah Data</string>
    <string name="tombol_lihat">Lihat Data</string>
    <string name="tombol_edit">Save</string>
    <string name="tombol_cancel">Cancel</string>
    <string name="tombol_dialog_edit">Edit</string>
    <string name="tombol_dialog_delete">Delete</string>
    <string name="title_view">Data Barang</string>
    <string name="title_edit">Edit Barang | ID : </string>
</resources>
