<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.finalproject.e_kantin.TentangActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="fill"
            android:background="@color/colorPrimary"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
        android:id="@+id/ten1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/hitam"
        android:layout_centerHorizontal="true"
        android:text="@string/tentang1"/>
    <TextView
        android:id="@+id/ten2"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ten1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kelas"/>
    <TextView
        android:id="@+id/ten3"
        android:layout_below="@id/ten2"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/npm"
        android:layout_toRightOf="@id/ten3"
        android:layout_below="@id/ten2"
        android:layout_marginTop="60dp"
        android:gravity="left"/>
    <TextView
        android:layout_below="@id/ten3"
        android:textAlignment="center"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
